Fixing article spacing bottom

--- a/source/assets/_sass/components/article.sass
+++ b/source/assets/_sass/components/article.sass
@@ -48,9 +48,6 @@
     margin-bottom: 0
 
 .single
-  .article
-    padding-bottom: 0
-
   .tags a
     color: rgba(#fff, .7)
 
